19149
{code}
scala> { val x = 0 ; def foo(i: Int) = 2*i ; s"""Hi, ${ foo($x) }""" }
<console>:8: error: not found: value $x
       { val x = 0 ; def foo(i: Int) = 2*i ; s"""Hi, ${ foo($x) }""" }
                                                            ^
{code}
This gives one pause because of generated var names and throwing dollars at a problem.  Can the message be supplemented?

As reported by retronym when he asked for a super-nice compiler:
https://github.com/scala/scala/pull/2956
